Fixed issue with scrollbar

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxygen&display=swap');
+@import "/src/utilities/variables";
 
 div {
   display: block;
@@ -7,6 +8,6 @@ div {
 #header {
   z-index: 99;
   position: fixed;
-  width: 100%;
+  width: calc(100% - #{$scrollbar-width});
   //top: 0;
 }
